<resources>
    <string name="app_name">AssetsCare</string>
    <string name="scanner_msg">Aponte a câmera para o QRCode</string>
    <string name="btn_text">LER QRCODE</string>
    <string name="btn_text2">Cancelar</string>
    <string name="btn_text_cancelar">cancelar</string>
    <string name="str_btn_revisao">Registrar Revisão</string>
    <string name="str_tv_alerta_rede">Houve um problema com a conexão ou o número de pratrimônio inserido é inválido, verifique os dados e a rede e tente novamente!</string>
    <string name="str_enviar">Enviar OS</string>
    <string name="str_voltar">Voltar à Tela Inicial</string>
    <string name="title_activity_upload_photo">UploadPhoto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_btn_voltar_main">"Voltar"</string>
    <string name="str_buscar"></string>
    <string name="btn_buscar_txt">buscar</string>
    <string name="et_qrcode_str">Digite o nº do patrimônio:</string>
    <string name="tv_descricao_patrimonio">Num. Patrimônio: </string>
    <string name="tv_descricao_tec">Técnico...</string>
    <string name="btn_text_gerenciar">Gerenciar OS\'s</string>
    <string name="str_dado_nao_carregado">DADO NÃO CARREGADO</string>
    <string name="str_tv_descricao_loja">Loja</string>
    <string name="str_tv_num_os">Num. OS:</string>
    <string name="str_inicio_manutencao">Início Manutenção:</string>
</resources>